ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Invoice_Line__c/fields/ActualSquares__c.field-meta.xml
<CustomField>
    <fullName>ActualSquares__c</fullName>
    <label>Actual Squares</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>