ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Invoice_Line__c/fields/Bundles__c.field-meta.xml
<CustomField>
    <fullName>Bundles__c</fullName>
    <label>Bundles</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>