ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Invoice_Line__c/fields/Dollars__c.field-meta.xml
<CustomField>
    <fullName>Dollars__c</fullName>
    <label>Dollars</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>