ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Invoice_Line__c/fields/Dollars_Amount_Formula__c.field-meta.xml
<CustomField>
    <fullName>Dollars_Amount_Formula__c</fullName>
    <formula>&quot;$&quot; &amp;
IF( 
   Dollars__c &gt;= 1000000, 
  TEXT(FLOOR(Dollars__c / 1000000)) &amp; &quot;,&quot;, 
  &quot;&quot;) &amp; 
IF( 
  Dollars__c &gt;= 1000, 
  RIGHT(TEXT(FLOOR(Dollars__c / 1000)), 3) &amp; &quot;,&quot;, 
  &quot;&quot;) &amp; 
RIGHT(TEXT(FLOOR(Dollars__c )), 3) &amp; &quot;.&quot; &amp; 
IF( 
  MOD(Dollars__c , 1) * 100 &lt; 10, 
  &quot;0&quot; &amp; TEXT(ROUND(MOD(Dollars__c , 1), 2) * 100), 
  TEXT(MIN(ROUND(MOD(Dollars__c , 1), 2) * 100, 99)) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dollars</label>
    <type>Text</type>
</CustomField>