ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Invoice_Line__c/fields/Is_Used_To_Calculate_Square__c.field-meta.xml
<CustomField>
    <fullName>Is_Used_To_Calculate_Square__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used for calculation on roll up summaries for Bundles and Squares. This will have no impact on Purchase and Rebate Rollup summaries.</description>
    <label>Used To Calculate Squares</label>
    <type>Checkbox</type>
</CustomField>