ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Invoice_Line__c/fields/RebateSquares__c.field-meta.xml
<CustomField>
    <fullName>RebateSquares__c</fullName>
    <label>Rebate Squares</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>